# AutoPatch

./: README.md  Scripts_README.md
AutoPatch/: CMakeLists.txt  test4.code-workspace
AutoPatch Main/include/: ebpf_helper.h  ebpf_helper_impl.h  iotpatch.h
AutoPatch Main/src/: fixed_patch_load.c
AutoPatch/include/: ebpf_types.h  ebpf_vm.c  fixed_patch_point_def.h  fixed_patch_points.h  jit.c  jit_thumb2.h  patch_service.h  utils.h
AutoPatch/src/: ebpf_allocator.c  flash_api.c  patch_service.c  profiling.c
AutoPatchMain/: CMakeLists.txt  README.md  README.rst  prj.conf
AutoPatchMain/include/: ebpf_porting.h  jit_thumb2.c
AutoPatchMain/src/: hashmap.c  iotpatch.c  main.c  utils.c
Docker/: Dockerfile  README.md
LLVM/: BasicBlock.cpp  BasicBlock.h  IRBuilder.h  README.md
LLVM Modifications/: README.md
LLVM Passes/: README.md
LLVM Passes/AutoPatchFirstPass/: AutoPatchFirstPass.cpp
LLVM Passes/AutoPatchSecondPass/: AutoPatchSecondPass.cpp
PCEvaluation/: Hotpatch_CVE_10021.bc  Script.sh  Script_withoutlink.sh  linked.bc  my_program  test.bc  test.c
Passes/: CMakeLists.txt  README.md
Passes/AutoPatchFirstPass/: AutoPatchFirstPass.cpp  CMakeLists.txt
Passes/AutoPatchSecondPass/: CMakeLists.txt
Results/: Hotpatch_CVE_10021.bc  Hotpatch_CVE_10023old.bc  Hotpatch_CVE_10023old.ll  Hotpatch_CVE_10062.bc  Hotpatch_CVE_10062.ll  Hotpatch_CVE_10062_2.ll  Hotpatch_CVE_1111.bc  Hotpatch_CVE_1111.ll  Hotpatch_CVE_16524.bc  Hotpatch_CVE_16524.ll  Hotpatch_CVE_17443.ll  Hotpatch_CVE_17445.ll  Hotpatch_CVE_174451.bc  Hotpatch_CVE_2784.ll
Scripts/: README.md  Scripts_README.md  analysis.sh  instrument.sh
Testcases/: README.md
Testcases/CVE Dataset/CVE-2017-2784(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE Dataset/CVE-2018-16524(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2018-16528_1(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE Dataset/CVE-2018-16528_2(auto)/: patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2018-16603(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10021(auto)/: .infoTransfer.dot  Note  patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10021(auto)/OLD STUFF/: Hotpatch3.ll  patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10023(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10024(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10028(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10062(auto)/: patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-10062(auto)/OLD stuff/: Hotpatch.bc  Hotpatch.ll  Hotpatch2.bc  Hotpatch2.ll  patchedFunc-ins.ll  patchedFunc-inst.bc  patchedFuncnew.ll
Testcases/CVE Dataset/CVE-2020-10063(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-17443(auto)/: patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE Dataset/CVE-2020-17445(auto)/: patchedFunc-inst.bc  patchedFunc-inst.ll  patchedFunc.ll
Testcases/CVE-2017-2784(auto)/: patchedFunc.c  patchedFunc.ll
Testcases/CVE-2018-16524(auto)/: patchedFunc-inst.ll  patchedFunc.ll  patchedFunc_old.c
Testcases/CVE-2018-16528_1(auto)/: patchedFunc.c  patchedFunc.ll
Testcases/CVE-2018-16528_2(auto)/: patchedFunc-inst.bc
Testcases/CVE-2018-16603(auto)/: patchedFunc.ll
Testcases/CVE-2020-10021(auto)/: patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE-2020-10021(auto)/OLD STUFF/: Hotpatch2.bc  Hotpatch2.ll  Hotpatch3.bc  patchedFunc-inst.bc
Testcases/CVE-2020-10023(auto)/: patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE-2020-10024(auto)/: patchedFunc.ll
Testcases/CVE-2020-10028(auto)/: patchedFunc-inst.ll  patchedFunc-inst1.bc  patchedFunc-inst1.ll  patchedFunc1.ll
Testcases/CVE-2020-10062(auto)/: Note  patchedFunc-inst.ll  patchedFunc.c  patchedFunc.ll
Testcases/CVE-2020-10062(auto)/OLD stuff/: patchedFunc-ins.bc  patchedFuncnew-inst.bc  patchedFuncnew-inst.ll
Testcases/CVE-2020-10063(auto)/: math_extras.h  patchedFunc-inst.ll  patchedFunc.c
Testcases/CVE-2020-17443(auto)/: patchedFunc-inst.bc
Testcases/CVE-2020-17445(auto)/: patchedFunc.c  patchedFunc.ll
Testcases/Results/: Hotpatch_CVE_10021.ll  Hotpatch_CVE_10023.bc  Hotpatch_CVE_10023.ll  Hotpatch_CVE_10023old.ll  Hotpatch_CVE_10024.bc  Hotpatch_CVE_10024.ll  Hotpatch_CVE_10028.bc  Hotpatch_CVE_10028.ll  Hotpatch_CVE_10028_workd.bc  Hotpatch_CVE_10028_workd.ll  Hotpatch_CVE_10062.ll  Hotpatch_CVE_10062_1.bc  Hotpatch_CVE_10062_1.ll  Hotpatch_CVE_10062_2.bc  Hotpatch_CVE_10062_2.ll  Hotpatch_CVE_10063.bc  Hotpatch_CVE_10063.ll  Hotpatch_CVE_1111.ll  Hotpatch_CVE_16524.ll  Hotpatch_CVE_16524_1.ll  Hotpatch_CVE_16528_1.bc  Hotpatch_CVE_16528_1.ll  Hotpatch_CVE_16528_2.bc  Hotpatch_CVE_16528_2.ll  Hotpatch_CVE_16603.bc  Hotpatch_CVE_16603.ll  Hotpatch_CVE_17443.bc  Hotpatch_CVE_17443.ll  Hotpatch_CVE_174451.ll  Hotpatch_CVE_2784.bc  Hotpatch_CVE_2784.ll  README.md
